# creatur-genes

./: CHANGELOG.md  LICENSE  README.md  creatur-genes.cabal  default.nix  fixit.sh  notes
src/ALife/Creatur/Gene/: AdjusterTest.hs  Test.hs
src/ALife/Creatur/Gene/Numeric/: Narrow.hs  NonNegative.hs  PlusMinusOne.hs  UnitInterval.hs  Util.hs  Weights.hs  WeightsInternal.hs
test/: Spec.hs
test/ALife/Creatur/Gene/: TestQC.hs
test/ALife/Creatur/Gene/Numeric/: NonNegativeQC.hs  PlusMinusOneQC.hs  UnitIntervalQC.hs  UtilQC.hs  WeightsQC.hs
