cabal-version:      2.4
name:               creatur-genes
version:            1.0.2
synopsis:           Genes and genetic utilities for use with creatur.
description:
  Please see the README on GitHub at <https://github.com/mhwombat/creatur-genes#readme>

homepage:           https://github.com/mhwombat/creatur-genes
bug-reports:        https://github.com/mhwombat/creatur-genes/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Amy de Buitléir
maintainer:         amy@nualeargais.ie
copyright:          2021 Amy de Buitléir
category:           AI
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/mhwombat/creatur-genes

common common-stuff
  default-language: Haskell2010
  build-depends:
    , base       >=4.7 && <5
    , QuickCheck >= 2.14.2 && < 2.15

library
  import:          common-stuff
  hs-source-dirs:  src
  exposed-modules:
    ALife.Creatur.Gene.Numeric.Narrow
    ALife.Creatur.Gene.Numeric.PlusMinusOne
    ALife.Creatur.Gene.Numeric.NonNegative
    ALife.Creatur.Gene.Numeric.UnitInterval
    ALife.Creatur.Gene.Numeric.Util
    ALife.Creatur.Gene.Numeric.Weights
    ALife.Creatur.Gene.Numeric.WeightsInternal
    ALife.Creatur.Gene.Test

  other-modules:   Paths_creatur_genes
  autogen-modules: Paths_creatur_genes
  ghc-options:     -Wall -Wunused-packages
  build-depends:
    , cereal      >= 0.5.8 && < 0.6
    , creatur     >= 5.9.32 && < 5.10
    , deepseq     >= 1.4.4 && < 1.5
    , MonadRandom >= 0.5.3 && < 0.6
    , mtl         >= 2.2.2 && < 2.3
    , random      >= 1.2.0 && < 1.3
    , som         >= 11.0 && < 11.1

test-suite creatur-genes-test
  import:         common-stuff
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages

  other-modules:
    ALife.Creatur.Gene.Numeric.PlusMinusOneQC
    ALife.Creatur.Gene.Numeric.NonNegativeQC
    ALife.Creatur.Gene.Numeric.UnitIntervalQC
    ALife.Creatur.Gene.Numeric.UtilQC
    ALife.Creatur.Gene.Numeric.WeightsQC
    ALife.Creatur.Gene.TestQC

  build-depends:
    , creatur-genes
    , numeric-tools
    , test-framework
    , test-framework-quickcheck2
